Fix frontend button vertical alignment

--- a/plugins/woocommerce-blocks/assets/js/blocks/product-gallery/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/product-gallery/style.scss
@@ -174,7 +174,6 @@ $full-height-mobile-admin-bar: calc($full-height-desktop - $admin-bar-mobile-hei
 #{$next-previous} {
 	display: flex;
 	align-items: flex-end;
-	position: absolute;
 	flex-direction: row;
 	justify-content: space-between;
 	width: 100%;
